--- a/src/gwt/public/landing/landing.css
+++ b/src/gwt/public/landing/landing.css
@@ -297,28 +297,28 @@
    LANDING PAGE - FEATURED WHIRLED
 -------------------------------------*/
 
-.LandingPanel .FeaturedWhirled {
+.featuredGroupPanel {
   background: url(/images/landing/featured_whirled_bg.png) no-repeat top center;
   width: 448px;
   height: 376px;
 }
 
 /* hide "Featured Whirled" title */
-.LandingPanel .FeaturedWhirled .Title {
+.featuredGroupPanel .Title {
   display: none;
 }
 
-.LandingPanel .FeaturedWhirled .Flash {
+.featuredGroupPanel .Flash {
   position: absolute;
   top: 46px;
   left: 52px;
 }
 
-.LandingPanel .FeaturedWhirled .Flash img {
+.featuredGroupPanel .Flash img {
   margin: 0;
 }
 
-.LandingPanel .FeaturedWhirled .FeaturedWhirledName {
+.featuredGroupPanel .FeaturedGroupName {
   position: absolute;
   top: 255px;
   left: 75px;
@@ -329,11 +329,11 @@
   font-size: 16px;
 }
 
-.LandingPanel .FeaturedWhirled .FeaturedWhirledName a {
+.featuredGroupPanel .FeaturedGroupName a {
   color: #FFFFFF;
 }
 
-.LandingPanel .FeaturedWhirled .OnlineBox {
+.featuredGroupPanel .OnlineBox {
   font-family: Arial, Helvetica, sans-serif;
   color: #FFFFFF;
   font-weight: bold;
@@ -348,29 +348,29 @@
 }
 
 /* hide group description */
-.LandingPanel .FeaturedWhirled .Blurb {
+.featuredGroupPanel .Blurb {
   display: none;
 }
 
-.LandingPanel .FeaturedWhirled .PrevButton {
+.featuredGroupPanel .PrevButton {
   position: absolute;
   top: 321px;
   left: 10px;
 }
 
-.LandingPanel .FeaturedWhirled .NextButton {
+.featuredGroupPanel .NextButton {
   position: absolute;
   top: 321px;
   left: 385px;
 }
 
-.LandingPanel .FeaturedWhirled .Icons {
+.featuredGroupPanel .Icons {
   position: absolute;
   left: 80px;
   top: 306px;
 }
 
-.LandingPanel .FeaturedWhirled .Icons .Icon {
+.featuredGroupPanel .Icons .Icon {
   text-align: center;
   float: left;
   width: 65px;
@@ -384,7 +384,7 @@
   margin-left: 5px;
 }
 
-.LandingPanel .FeaturedWhirled .Icons .IconBox {
+.featuredGroupPanel .Icons .IconBox {
   height: 37px;
 }
 
