Remove DeviantArt contest promo from the Me page, replace it with My Profile and Passport buttons so we can take those out of the sub-menu.  Space for two or three other buttons here if there are any suggestions.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -13,10 +13,18 @@
   color: #216CA3;
 }
 
-.myWhirled .PeopleOnline {
-  text-align: right;
+.myWhirled .ButtonBar {
+  padding: 10px;
+  margin-left: 10px;
+}
+
+.myWhirled .ButtonBar div {
+  margin-right: 10px;
+}
+
+.myWhirled .ButtonBar .PeopleOnline {
+  float: right;
   font-size: 10px;
-  padding: 5px 20px 0px 0px;
   color: #63AAE2;
 }
 
