- Ditched the old SoundPlayer class. - Moved music playing from RoomObjectController to WorldController. - Added a button to the control bar (oh no! more buttons!) to view music info - Ditched cruft related to chiyogami being able to schedule music for a room.   I would have had to rewrite it anyway, it didn't really make sense (music streams,   so why were we preloading?), and we're not using it now.
TODO:
- MediaControls can't cope if it misses events (fixing shortly)
- button has programmer art
- The damn button won't hide when I tell it to. Goddamn you, flex.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -531,6 +531,7 @@ TabNavigator, TabBar {
 .controlBarIdleButton, .controlBarScaleButton, .controlBarAVRGButton, .tickButton,
 .controlBarButtonVolume0, .controlBarButtonVolume1, .controlBarButtonVolume2,
 .controlBarButtonVolume3, .controlBarButtonVolume4, .controlBarHomePageGridButton,
+.controlBarButtonMusic,
 .roomEditScaleDown, .roomEditScaleUp, .roomEditMoveDown, .roomEditMoveUp,
 .roomEditRotateLeft, .roomEditRotateRight, .roomEditFlipH, .roomEditFlipV,
 .roomEditTrash, .roomEditAdd, .roomEditDoor, .roomRemoveDoor, .roomEditLink, .roomRemoveLink,
@@ -625,6 +626,10 @@ TabNavigator, TabBar {
 
 .controlBarHomePageGridButton {
   image: Embed(source="../../rsrc/media/skins/controlbar/grid.png");
+}
+
+.controlBarButtonMusic {
+  image: Embed(source="../../rsrc/media/skins/controlbar/music.png");
 }
 
 .tickButton {
