Add sort by name/members/date on the groups page.  Refactor tag & full text search to use same servlet call as the default grid data select, and page on the server.

--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -391,6 +391,9 @@
 .galaxyPanel .MyGroups .MyGroup a {
   text-decoration: none;
 }
+.galaxyPanel .MyGroups .MyGroup a:hover {
+  text-decoration: underline;
+}
 
 .galaxyPanel .MyGroups .SeeAll {
   display: block;
