Add a banner to the top of the #me page that explains how to be an affiliate and rotates between 3 images every 10 seconds.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -12,9 +12,10 @@
   width: 100%;
 }
 
-.myWhirled .ButtonBar {
-  padding: 10px;
-  margin-left: 10px;
+.myWhirled .RotatingBanner {
+  width: 600px;
+  height: 90px;
+  margin: 10px auto 0 auto;
 }
 
 .myWhirled .NewsAndFriends {
