Let's just make the banner a static random one of the three.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -12,7 +12,7 @@
   width: 100%;
 }
 
-.myWhirled .RotatingBanner {
+.myWhirled .Banner {
   width: 600px;
   height: 90px;
   margin: 10px auto 0 auto;
