--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -409,6 +409,10 @@
   margin-left: 25px;
 }
 
+.galaxyPanel .tagCloud .Link {
+  display: block;
+}
+
 .galaxyPanel .GroupsList {
   width: 528px;
 }
