--- a/src/gwt/public/account/account.css
+++ b/src/gwt/public/account/account.css
@@ -128,6 +128,11 @@
   color: #d0e6f7;
 }
 
+.logonPagePanel .PageText {
+  font-size: 14px;
+  padding: 30px 0 0 30px;
+}
+
 .logonPagePanel .logonPanel {
   margin: 25px 0 10px 25px;
 }
