Using a 10px margin on the top of this page causes this image to extend into pixels 0 to -10 which causes a vertical scrollbar to appear even when the page fits entirely.
Margins are yet another hard to understand, somewhat broken part of CSS and
should be handled with care. If you ever use margins, you have to check to make
sure you're not breaking page scrolling.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -15,7 +15,7 @@
 .myWhirled .Banner {
   width: 600px;
   height: 90px;
-  margin: 10px auto 0 auto;
+  padding-top: 10px;
   cursor: pointer;
 }
 
