Purdy new live view controls.

--- a/src/gwt/public/room/room.css
+++ b/src/gwt/public/room/room.css
@@ -10,8 +10,37 @@
   height: 200px;
 }
 
-.sceneView .LiveOverlay {
+.sceneView .liveButton {
   position: absolute;
-  top: 180px;
-  left: 112px;
+  bottom: 0;
+  left: 0;
+  background-image: url(/images/ui/snapshot_live.png);
+  width: 113px;
+  height: 44px;
+}
+
+.sceneView .liveButton-up-hovering {
+  background-image: url(/images/ui/snapshot_live_over.png);
+}
+
+.sceneView .liveButton-down-hovering {
+  background-image: url(/images/ui/snapshot_live_down.png);
+}
+
+.sceneView .enterButton {
+  position: absolute;
+  top: 0;
+  background-image: url(/images/ui/snapshot_enter.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  width: 350px;
+  height: 200px;
+}
+
+.sceneView .enterButton-up-hovering {
+  background-image: url(/images/ui/snapshot_enter_over.png);
+}
+
+.sceneView .enterButton-down-hovering {
+  background-image: url(/images/ui/snapshot_enter_down.png);
 }
