A promotion system wherein a small icon and a blurb are shown to the user at the top of the Me page. Still TODO: integrate a date picker widget and allow the start and end times for the promotion to be properly configured.

--- a/src/gwt/public/adminz/adminz.css
+++ b/src/gwt/public/adminz/adminz.css
@@ -223,3 +223,17 @@
   width: 17px;
   height: 17px;
 }
+
+/** PromotionEditor */
+.promoEditor {
+  border-top: 15px white solid;
+}
+
+.promoEditor .Promos .Header {
+  font-weight: bold;
+  border-bottom: 1px solid;
+}
+
+.promoEditor .Promos {
+  font-size: 12px;
+}
